--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-user_local: 'user',
-host_local: 'localhost',
-database_local: 'www',
-password_local: 'password',
-port_local: 5432,
+db_user: 'user'
+db_host: 'localhost'
+db_database: 'www'
+db_password: 'password'
+db_port: 5432
 
-user: 'nhipsqen',
-host: 'mouse.db.elephantsql.com',
-database: 'nhipsqen',
-password: 'yatwcfaAtUhWWHgiX2_SgPAqUNIGXvOn',
-port: 5432,
+db_user_: 'nhipsqen'
+db_host_: 'mouse.db.elephantsql.com'
+db_database_: 'nhipsqen'
+db_password_: 'yatwcfaAtUhWWHgiX2_SgPAqUNIGXvOn'
+db_port_: 5432,
